Salesforce/force-app/main/default/objects/Field_Specification__mdt/Field_Specification__mdt.object-meta.xml
<CustomObject>
    <description>Specifies custom field metadata.  Originally built to define field labels for the Dependent Picklist Sets feature (NWIG-1/NWIG-6).</description>
    <label>Field Specification</label>
    <pluralLabel>Field Specifications</pluralLabel>
</CustomObject>