Salesforce/force-app/main/default/objects/Field_Specification__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The target field.</description>
    <inlineHelpText>The target field.</inlineHelpText>
    <label>Field</label>
    <metadataRelationshipControllingField>Field_Specification__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Field_Specifications</relationshipLabel>
    <relationshipName>Field_Specifications</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>