Salesforce/force-app/main/default/objects/Field_Specification__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The field label to display.</description>
    <inlineHelpText>The field label to display.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>