Salesforce/force-app/main/default/objects/Field_Specification__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The target object.</description>
    <inlineHelpText>The target object.</inlineHelpText>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Field_Specifications</relationshipLabel>
    <relationshipName>Field_Specifications</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>