Salesforce/force-app/main/default/objects/Field_Specification__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The field specification type.  For a Dependent Picklist Set, this value should equal a value within Dependent_Picklist_Set__c.Type__c.</description>
    <inlineHelpText>The field specification type.  For a Dependent Picklist Set, this value should equal a value within Dependent_Picklist_Set__c.Type__c.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notifiable Works Interactive Guide - Baseline</fullName>
            </value>
            <value>
                <fullName>Notifiable Works Interactive Guide - Descriptive</fullName>
            </value>
            <value>
                <fullName>Licence Tool - Baseline</fullName>
            </value>
            <value>
                <fullName>Licence Tool - Licensee</fullName>
            </value>
            <value>
                <fullName>Licence Tool - Non Licensee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>